[gd_scene load_steps=6 format=3 uid="uid://bm78wpurpem23"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_0pxa8"]

[sub_resource type="Gradient" id="Gradient_ap62m"]
offsets = PackedFloat32Array(0, 0.761261, 0.914414)
colors = PackedColorArray(0.27451, 0.27451, 0.27451, 0.568627, 0.330011, 0.330011, 0.330011, 0.271535, 0.341176, 0.341176, 0.341176, 0.0470588)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_aqrh4"]
gradient = SubResource("Gradient_ap62m")

[sub_resource type="LabelSettings" id="LabelSettings_a02sg"]
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_p3xff"]
font_size = 20

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0pxa8")

[node name="MenuBox" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -98.0
offset_right = 498.0
offset_bottom = 98.0
grow_vertical = 2
texture = SubResource("GradientTexture1D_aqrh4")

[node name="X" type="HSlider" parent="MenuBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 77.0
offset_top = -14.5
offset_right = 303.0
offset_bottom = 1.5
grow_vertical = 2
focus_mode = 0
min_value = 2.0
max_value = 30.0
value = 20.0

[node name="Y" type="HSlider" parent="MenuBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 77.0
offset_top = 13.5
offset_right = 303.0
offset_bottom = 29.5
grow_vertical = 2
focus_mode = 0
min_value = 2.0
max_value = 30.0
value = 20.0

[node name="LabelX" type="Label" parent="MenuBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 325.0
offset_top = -20.0
offset_right = 365.0
offset_bottom = 6.00003
grow_vertical = 2
text = "20"

[node name="LabelY" type="Label" parent="MenuBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 325.0
offset_top = 9.0
offset_right = 365.0
offset_bottom = 35.0
grow_vertical = 2
text = "20
"

[node name="Size" type="Label" parent="MenuBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -48.0
offset_right = 94.0
offset_bottom = -22.0
grow_vertical = 2
text = "Size"
horizontal_alignment = 1

[node name="LX" type="Label" parent="MenuBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -19.5
offset_right = 69.0
offset_bottom = 6.5
grow_vertical = 2
text = "X"

[node name="LX2" type="Label" parent="MenuBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = 11.5
offset_right = 69.0
offset_bottom = 37.5
grow_vertical = 2
text = "Y
"

[node name="Keys" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 209.0
offset_bottom = 90.0
text = "Enter - Regenerate
Tab - Show Mouse Cursor
Esc - Quit"
label_settings = SubResource("LabelSettings_a02sg")

[node name="MovementKeys" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -90.0
offset_right = 211.0
offset_bottom = -15.0
grow_vertical = 0
text = "WASD - Movement
Space / Shift - Up / Down
Mouse X/Y - Turn X/Y"
label_settings = SubResource("LabelSettings_a02sg")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 15.0
offset_right = 115.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Wave Function Collapse"
label_settings = SubResource("LabelSettings_p3xff")
horizontal_alignment = 1

[connection signal="drag_started" from="MenuBox/X" to="." method="_on_x_drag_started"]
[connection signal="value_changed" from="MenuBox/X" to="." method="_on_x_value_changed"]
[connection signal="drag_started" from="MenuBox/Y" to="." method="_on_y_drag_started"]
[connection signal="value_changed" from="MenuBox/Y" to="." method="_on_y_value_changed"]
